istio-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: istio-ingressroute
  namespace: istio-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`istio.192.168.87.157.nip.io`)
      priority: 10
      services:
        - name: istio-ingressgateway
          port: 80
  tls:
    secretName: istio.192.168.87.157.nip.io
