jaeger-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-virtualservice
spec:
  hosts:
  - "jaeger-istio.192.168.87.3.nip.io"
  gateways:
  - jaeger-gateway
  http:
  - route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
